components/ua/authenticate-frontend/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticate-frontend
spec:
  template:
    spec:
      containers:
        - name: authenticate-frontend
          image: ghcr.io/isisbusapps/authenticate-frontend@sha256:a86d678e17b583dc8998a88c27add0d6568aaa39af3a5be64d6745fdf9456eb5
          volumeMounts:
            - mountPath: /front_end/config/allowed-redirects.json
              name: allowed-redirects
              subPath: allowed-redirects.json
            - mountPath: /front_end/config/internal-redirects.json
              name: internal-redirects
              subPath: internal-redirects.json
      volumes:
        - name: allowed-redirects
          configMap:
            name: allowed-redirects
        - name: internal-redirects
          configMap:
            name: internal-redirects
