components/ua/authenticate-frontend/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authenticate-frontend
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "*.facilities.rl.ac.uk"
    - "*.developers.facilities.rl.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
      - name: authenticate-frontend
        port: 3000
